[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Floors/Floor.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/tileSet3.tres" type="TileSet" id=2]

[node name="Floor" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="TileMap2" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="decor" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
format = 1

[node name="Entrance" type="Node2D" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="EnemyPosistions" type="Node2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
